# summit-arm-ual

./: .gitignore  .gitmodules  LEEME.txt  README.md
Sources/experimental/: .hgtags  Makefile
Sources/experimental/.hg/: dirstate  hgrc  undo.desc
Sources/experimental/assisted_teleop/: Makefile
Sources/experimental/eband_local_planner/: Makefile
Sources/experimental/goal_passer/: Makefile
Sources/experimental/pose_base_controller/: Makefile
Sources/experimental/pose_follower/: Makefile
Sources/experimental/sbpl_lattice_planner/: CMakeCache.txt  Makefile  cmake_install.cmake
Sources/experimental/sbpl_recovery/: Makefile
Sources/experimental/twist_recovery/: Makefile
Sources/summit/summit_robot/: download_components.sh
Sources/summit/summit_sim/: CMakeLists.txt  Summit_Fuerte_Alfa_Release_notes.txt
Sources/summit_robot/robotnik_arduimu/: manifest.xml
Sources/summit_robot/sphere_camera/: CMakeLists.txt  mainpage.dox  manifest.xml
Sources/summit_robot/summit_controller_dspic/: package.xml
Sources/summit_robot/summit_controller_dspic/launch/: summit_controller_dspic.launch  summit_controller_dspic.yaml
Sources/summit_robot/summit_controller_dspic/src/: summit_controller_dspic.cpp
Sources/summit_sim/summit_2dnav/: Makefile
joystick_drivers/: CMakeCache.txt  Makefile  cmake_install.cmake
joystick_drivers/joy/: joy_node
joystick_drivers/ps3joy/: ps3joy.py  ps3joy_node.py
joystick_drivers/spacenav_node/: spacenav_node
launchs/: package.xml
launchs/gmapping/: summit_gmapping.launch
launchs/maps/2015-06-11_PasilloCITE4_Circuito/: icp-slam_summit_gridmatching.ini  map.simplemap  map_gridmap_no00.gridmap
launchs/navigation_amcl/: amcl_summit.launch  nav_amcl.launch  robot_nav_alcazar.launch
launchs/navigation_amcl/params_nav/: base_local_planner_params.yaml  global_costmap_params.yaml
launchs/simul_navigation_mrpt/: reactive_nav_demo_with_mvsim.xml
old/launchs/: CMakeLists.txt
old/launchs/gmapping/: hector_slam.launch
old/launchs/navigation_amcl/: nav_amcl.launch
old/launchs/simul_navigation_mrpt/: reactive2d_config.ini  reactive_nav_demo_with_mvsim.launch
old/summit_missions/: CMakeLists.txt  package.xml
old/summit_missions/floor_1/: CITE_IV_floor1_COccupancyGridMap2D_00_limits.txt  localization.launch  summit_cite_IV_floor1.launch
old/summit_missions/maps/: MAP1_CITE_IV_1_10.simplemap
old/summit_missions/mrpt_reactive_nav2d/: reactive2d_config.ini
old/summit_missions/planta_baja_CITE_IV/: localization_planta_baja.launch
old/summit_missions/rviz/: cite_IV_floor1.rviz
old/summit_robot/: stack.xml
old/summit_robot/robotnik_arduimu/: CMakeLists.txt  package.xml
old/summit_robot/robotnik_arduimu/include/robotnik_arduimu/: robotnik_arduimu.h
old/summit_robot/robotnik_arduimu/launch/: robotnik_arduimu.yaml  robotnik_arduimu_madgwick.launch
old/summit_robot/robotnik_arduimu/src/: robotnik_arduimu.cpp
old/summit_robot/summit_complete/: CMakeLists.txt
old/summit_robot/summit_complete/rviz/: summit_complete.rviz
old/summit_sim/summit_control/: CMakeLists.txt
old/summit_telegram_bot/: chatbot_train.yml  package.xml
old/summit_telegram_bot/server-php/: upload.php
robotnik_msgs/: CMakeLists.txt  package.xml
robotnik_msgs/msg/: AlarmMonitor.msg  AlarmsMonitor.msg  BatteryDockingStatusStamped.msg  BatteryStatusStamped.msg  CartesianEulerPose.msg  InverterStatus.msg  MotorsStatus.msg  MotorsStatusDifferential.msg  NamedInputsOutputs.msg  OdomCalibrationStatusStamped.msg  OdomManualCalibrationStatusStamped.msg  PantiltStatusStamped.msg  PresenceSensor.msg
robotnik_msgs/srv/: GetAlarms.srv  ResetFromSubState.srv  SetCartesianEulerPose.srv  SetFloatValue.srv
rplidar_ros/launch/: rplidar.launch
rplidar_ros/sdk/include/: rplidar.h  rptypes.h  (+3 more)
rplidar_ros/src/: client.cpp  node.cpp
summit_controller_dspic/: CMakeLists.txt  package.xml
summit_controller_dspic/include/summit_controller_dspic/: summit_controller_dspic.h
summit_controller_dspic/src/: SerialDevice.cc  summit_controller_dspic.cpp
summit_joystick_teleop/: package.xml
summit_joystick_teleop/src/: summit_joystick_teleop.cpp  summit_joystick_teleop_ackerman.cpp  summit_joystick_teleop_copia.cpp  summit_joystick_teleop_old.cpp
summit_missions/: localization.launch  pf-localization.ini  reactive2d_config.ini  reactive_nav_demo_with_mvsim.launch
summit_missions/floor_1/: CITE_IV_floor1.simplemap  CITE_IV_floor1_gridmap_no00.gridmap  localization.launch  summit_cite_IV_floor1.launch  summit_cite_IV_floor1_rviz.launch
summit_missions/mrpt_reactive_nav2d/: reactive2d_config.ini  reactive_nav.launch
summit_missions/planta_baja_CITE_IV/: _finalmap_planta_baja_CITE_IV.simplemap
summit_missions/rviz/: cite_IV_floor1_costmap.rviz
summit_pad/: CMakeLists.txt  package.xml
summit_pad/config/: ps3.yaml
summit_robot/robotnik_arduimu/: CMakeLists.txt
summit_robot/sphere_camera/: CMakeLists.txt  cmake_install.cmake  package.xml
summit_robot/sphere_camera/include/sphereptz/: sphereptz.h
summit_robot/sphere_camera/launch/: sphereptz.launch  test_sphere.launch
summit_robot/sphere_camera/src/: sphereptz.cpp
summit_robot/sphere_camera/src/sphere_camera/msg/: _ptz_state.py
summit_robot/summit_complete/: CMakeLists.txt  package.xml
summit_robot/summit_controller_dspic/: CMakeLists.txt
summit_robot/summit_controller_dspic/include/summit_controller_dspic/: summit_controller_dspic.h
summit_robot/summit_controller_dspic/launch/: summit_controller_dspic.launch
summit_robot/summit_controller_dspic/src/: summit_controller_dspic.cpp
summit_sim/summit_2dnav/: CMakeLists.txt  manifest.xml  package.xml
summit_sim/summit_joystick_teleop/: CMakeLists.txt
summit_telegram_bot/: CMakeLists.txt  chatbot_train.yml
summit_telegram_bot/robot-side-telegram-bot/: robotside_telegram_bot.py
summit_telegram_bot/server-php/: index.html  upload.php
summit_telegram_bot/server-telegram-bot/: summit_telegram_bot.py
summit_telegram_bot/src/: summit_telegram_bot.py
summit_telegram_bot/telegram-bot/: robotside_telegram_bot.py  serverside_telegram_bot.py
(+414 files in other folders)
