<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_msgs</name>
  <version>3.0.0</version>
  <description>The robotnik_msgs package. Common messages and services used by some Robotnik's packages.</description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="jmnavarrete@robotnik.es">Juan Manuel Navarrete</maintainer>
  <maintainer email="rvasquez@robotnik.es">Robert Vásquez</maintainer>

  <license>BSD</license>

  <!--<author email="rnavarro@robotnik.es">Román Navarro</author>-->
  <maintainer email="jlblanco@ual.es">José Luis Blanco Claraco</maintainer>

  <build_depend>ros_environment</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_cpplint</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
