<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>summit_controller_dspic</name>
  <version>1.1.0</version>
  <description>summit_controller_dspic</description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  <maintainer email="jlblanco@ual.es">Jose Luis Blanco Claraco</maintainer>

  <author>Robotnik</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/summit_controller_dspic</url>


  <build_depend>ros_environment</build_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>robotnik_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
