<?xml version="1.0"?>
<package>
  <name>sphere_camera</name>
  <version>0.0.1</version>
  <description>PTU of sphere camera</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  <license>GNU LGPL</license>
  <url type="website">http://wiki.ros.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
 

</package>
